# cookiecutter-pypackage-ai

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: LICENSE  README.md  README.rst  runtests  runtests.py  setup.cfg  tox.ini  travis.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: settings.py
