[metadata]
name = {{ cookiecutter.project_name }}
version = {{ cookiecutter.initial_version }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
keywords = anders
url = https://github.com/andersinno/{{ cookiecutter.project_slug }}
maintainer = Anders Innovations
maintainer_email = support@anders.fi
license = {{ cookiecutter.license }}
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
{%- if cookiecutter.support_python2 == 'yes' %}
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
{%- endif %}
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
{%- if cookiecutter.license == 'MIT' %}
    License :: OSI Approved :: MIT License
{%- endif %}
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
zip_safe = False

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data
DJANGO_SETTINGS_MODULE = {{cookiecutter.project_name}}.tests.settings

[flake8]
exclude = .tox,dist,venv
max-line-length = 120
max-complexity = 10

[isort]
include_trailing_comma=True
known_first_party={{ cookiecutter.project_slug }}
known_third_party=pytest,six
line_length=80
multi_line_output=3
not_skip=__init__.py
skip=.tox,dist,venv

[pycodestyle]
line_length = 120

[coverage:run]
branch = True
source = tests,
omit =
    *migrations*
    tests/test_*

[prequ]
annotate = yes
requirements-dev =
{%- if cookiecutter.support_python2 == 'yes' %}
    mock
{%- endif %}
    pycodestyle
    tox
requirements-test =
{%- if cookiecutter.support_python2 == 'yes' %}
    mock
{%- endif %}
    pytest
    pytest-cov
{%- if cookiecutter.is_it_django_package == 'yes' %}
    pytest-django
{%- endif %}
requirements-stylecheck =
    flake8
    flake8-isort
    flake8-print
    pep8-naming
